--- a/css/master.css
+++ b/css/master.css
@@ -23,16 +23,20 @@ footer {
 }
 h1 {
   font-size: 2em;
-  font-weight: 300;
+  font-weight: 700;
   font-family: 'Montserrat', sans-serif;
+
 }
 h3 {
-  font-weight: 500;
+  font-weight: 600;
   font-family: 'Montserrat', sans-serif;
 }
 h4 {
   font-weight: 500;
   font-family: 'Montserrat', sans-serif;
+}
+.center {
+  text-align: center;
 }
 .ulFooter {
   list-style: none;
@@ -46,12 +50,28 @@ h4 {
   font-weight: normal;
   color: #000000;
 }
+.liCoupe {
+  margin: 0.3em;
+}
 section {
   width: 90%;
+  padding-left: 2em;
+  padding-right: 2em;
+  padding-bottom: 1em;
+  margin-bottom: 2em;
   background-color: white;
-  text-align: center;
+  display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
+}
+#selectionBoule {
+  display: inline-flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+#boule1 {
+  height: 80%;
 }
 /*carrefour de choix*/
 .hub {
@@ -60,6 +80,8 @@ section {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
 }
 .choix {
   display: flex;
@@ -70,7 +92,7 @@ section {
   font-weight: bold;
   min-height: 35vh;
   min-width: 35vh;
-  border: 10px ridge #e93a3e;
+  border: 10px outset #e92a2e;
   margin: 0.2em;
 }
 .menu {
@@ -81,9 +103,94 @@ section {
   font-size: 1.2em;
   -webkit-box-shadow: 0px 0px 8px 0px #F53B3B;
   box-shadow: 0px 0px 8px 0px #F53B3B;
+    border: 10px solid #e92a2e;
+    border-radius: 50%;
 }
-
-
+.lienNav {
+  width: 200%;
+  text-decoration: none;
+  background-color: #dff1ee;
+  padding-left: 1.7em;
+  padding-right: 1em;
+  padding-top: 0.3em;
+  padding-bottom: 0.3em;
+  color: black;
+  font-weight: 600;
+  border: 5px outset #e92a2e;
+  border-radius: 0px 15px 0px 40px;
+}
+/*==Bouton==*/
+.choixCreateur {
+  background-color: #dff1ee;
+  margin: 0.2em;
+  border: 1px solid #fbd8e7;
+  font-family: 'Montserrat', sans-serif;
+  border-radius: 2px;
+}
+.choixCreateur:focus {
+  background-color: #e93a3e;
+}
+.choixCreateur:checked {
+  background-color: #fbd8e7;
+}
+/*==Menu aside navigation==*/
+.menuOnglet {
+  margin-left: 1em;
+  margin-right: 0em;
+  background-color: #dff1ee;
+  width: 50%;
+  height: auto;
+  padding-left: 1em;
+  padding-right: 1em;
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
+}
+.ulOnglet {
+  list-style: none;
+  text-align:right;
+  margin-bottom: 1em;
+}
+.liOnglet {
+  width: 100%;
+  margin-top: 2.2em;
+}
+/*==Conteneur flex==*/
+.conteneurListePrix {
+  width: 20%;
+  list-style: none;
+  text-align: justify;
+}
+#listeCocktails {
+  width: 70%;
+  list-style: none;
+  text-align: justify;
+}
+.price {
+  margin: 0.5em;
+}
+.flexCol {
+  display: flex;
+  flex-direction: column;
+}
+.flexRows {
+  display: flex;
+  flex-direction: row;
+}
+.conteneurRows {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+}
+/*==Input et formulaires ==*/
+label {
+  text-align: center;
+}
+.sizeInpute {
+  margin: 0.5em;
+  padding: 0.5em 1em;
+  border: 1px solid black;
+  border-radius: 0.5em;
+}
 /*==Responsivité==*/
 @media only screen and (max-width: 980px) {
   body {
@@ -97,17 +204,24 @@ section {
     margin: 0.3em;
   }
   section {
-    width: 98%;
+    width: 90%;
     background-color: white;
+  }
+  .menuOnglet {
+    width: 50%;
   }
   .hub {
     padding-top: 0.5em;
     padding-bottom: 0.5em;
+
       flex-direction: rows;
   }
   .choix {
     min-height: 20vh;
     min-width: 20vh;
+  }
+  .conteneurListePrix {
+    width: 100%;
   }
 }
 @media only screen and (max-width: 680px) {
@@ -131,5 +245,8 @@ section {
   }  .choix {
     min-height: 20vh;
     min-width: 20vh;
+  }
+  .conteneurListePrix {
+    width: 100%;
   }
 }
