--- a/css/master.css
+++ b/css/master.css
@@ -27,15 +27,19 @@ h1 {
   font-size: 2em;
   font-weight: 700;
   font-family: 'Montserrat', sans-serif;
-
 }
 h3 {
-  font-weight: 600;
+  font-weight: 500;
+  font-size: 2em;
   font-family: 'Montserrat', sans-serif;
 }
 h4 {
   font-weight: 500;
   font-family: 'Montserrat', sans-serif;
+}
+article {
+  min-width: 50%;
+  align-self: center;
 }
 .center {
   text-align: center;
@@ -63,9 +67,7 @@ section {
   margin-bottom: 2em;
   background-color: white;
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
 }
 #selectionBoule {
   display: inline-flex;
@@ -73,7 +75,10 @@ section {
   flex-wrap: wrap;
 }
 #boule1 {
-  height: 80%;
+  height: 50%;
+}
+.size50 {
+    height: 50%;
 }
 .liSansStyle {
   list-style: none;
@@ -125,12 +130,20 @@ section {
   border-radius: 0px 15px 0px 40px;
 }
 /*==Bouton==*/
+button {
+  font-size: 1.2em;
+}
+
 .choixCreateur {
   background-color: #dff1ee;
   margin: 0.2em;
+  padding-left: 0.3em;
+  padding-right: 0.3em;
+  padding-top: 0.2em;
+  padding-bottom: 0.2em;
   border: 1px solid #fbd8e7;
   font-family: 'Montserrat', sans-serif;
-  border-radius: 2px;
+  border-radius: 5px;
 }
 .choixCreateur:focus {
   background-color: #e93a3e;
@@ -143,15 +156,16 @@ section {
   margin: 0.2em;
   border: 2px solid #e93a3e;
   font-family: 'Montserrat', sans-serif;
-  border-radius: 2px;
+  border-radius: 4px;
 }
 /*==Menu aside navigation==*/
 .menuOnglet {
   margin-left: 1em;
   margin-right: 0em;
   background-color: #dff1ee;
-  width: 50%;
+  width: 30%;
   height: auto;
+  margin-top: 0.5em;
   padding-left: 1em;
   padding-right: 1em;
   padding-top: 0.5em;
@@ -168,7 +182,7 @@ section {
 }
 /*==Conteneur flex==*/
 .conteneurListePrix {
-  width: 20%;
+  width: 100%;
   list-style: none;
   text-align: justify;
 }
